fix size issue on smaller screen

--- a/src/index.css
+++ b/src/index.css
@@ -243,17 +243,6 @@ a {
   }
 }
 
-.leftCol h4 {
-  font-weight: 600;
-  font-size: 30px;
-  line-height: 28px;
-
-  @media (max-width: 768px) {
-    font-size: 12px;
-    line-height: 12px;
-  }
-}
-
 .leftCol p {
   font-weight: 300;
   font-size: 30px;
